bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:4: error: '(' expected but '{' found.
  } else if { }
            ^NearHundred:7: error: illegal start of simple expression
} 
^